changed meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SARA - Smartphone Assisted River Analysis</title>
-    <meta name="description" content="Revolutionary technology that transforms your smartphone into a powerful environmental monitoring device for river health assessment and trash detection." />
+    <meta name="description" content="A solution for river health assessment." />
     <meta name="author" content="SARA Project Team" />
 
     <meta property="og:title" content="SARA - Smartphone Assisted River Analysis" />
-    <meta property="og:description" content="Revolutionary technology that transforms your smartphone into a powerful environmental monitoring device for river health assessment and trash detection." />
+    <meta property="og:description" content="A solution for river health assessment." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="src/assets/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@sara-systems" />
+    <meta name="twitter:image" content="src/assets/logo.png" />
   </head>
 
   <body>
